Removed blur when burger menu is activated

--- a/public/en/index.html
+++ b/public/en/index.html
@@ -33,8 +33,8 @@
   
   
   
-  <link type="text/css" rel="stylesheet" href="/css/main.bundle.min.0eaf9a75deae7411dab1c29e8bee584b2fd7f836c99f68becb5649079e3648ed635265fcf90bf1335bb6a5a121dc2189474a47b3736bd8ad44a5f5b3684273f4.css"
-    integrity="sha512-Dq&#43;add6udBHascKei&#43;5YSy/X&#43;DbJn2i&#43;y1ZJB542SO1jUmX8&#43;QvxM1u2paEh3CGJR0pHs3Nr2K1EpfWzaEJz9A==" />
+  <link type="text/css" rel="stylesheet" href="/css/main.bundle.min.7379e8d8f960b6c1e2b138f4546731f7dde5e2b96c172c2216a24689a80b07838ebe16ab820fd146a90c80eee5f2c4350faaff1575b18490364697f19b19b25c.css"
+    integrity="sha512-c3no2PlgtsHisTj0VGcx993l4rlsFywiFqJGiagLB4OOvhargg/RRqkMgO7l8sQ1D6r/FXWxhJA2RpfxmxmyXA==" />
   
   
   <script type="text/javascript" src="/js/appearance.min.516a16745bea5a9bd011138d254cc0fd3973cd55ce6e15f3dec763e7c7c2c7448f8fe7b54cca811cb821b0c7e12cd161caace1dd794ac3d34d40937cbcc9ee12.js"
